# amorphous-wetting-md

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docker/: Dockerfile.halmd  README.md  compose.yaml
docs/: h5_schema.md
docs/refs/: bibliography.bib
notebooks/bulk_fluid/: LJ_bulk_fluid_analysis.ipynb  density_modes copy.ipynb  density_modes.ipynb
notebooks/exploratory/: Analysis.ipynb  SSF.ipynb  plot_ssf.py  vapor_binning.ipynb
notebooks/slit_pore/: _slit_pore_analysis.ipynb  h5md_to_xyz.ipynb  slit_pore_analysis.ipynb  slit_pore_analysis_var2_halmd1_1_1.ipynb  slit_pore_analysis_var2_oldcode.ipynb
notebooks/wall/: obstacle_ssf.ipynb
scripts/: run.sh
scripts/definitions/: lennard_jones.lua  pair_potential.lua  sidecar.lua  slab_analysis.lua  ssf_analysis.lua  wall_potential.lua  wavevectors.lua
scripts/experiments/barostat/: benchmark_npt_cost.sh  npt_flat_only.sh  smoke_npt.sh
scripts/lib/: barostat.lua  h5_metadata.lua  lennard_jones.lua  slab_analysis.lua  ssf_analysis.lua  wavevectors.lua
scripts/runners/: Slit-Pore-Production.lua  Slit-Pore-Thermalization.lua  amorphous_wall.lua  crystalline_wall.lua  lennard_jones.lua  lennard_jones_equilibration.lua  liquid_equilibration.lua  liquid_vapor_mixture.lua  liquid_vapor_mixture_single.lua  slit_pore_production.lua  slit_pore_thermalization.lua  slit_simulation.lua  slit_simulation_NVE.lua  vapor_equilibration.lua  vle_vacuum.lua
src/analysis/: __init__.py  paths.py  pbc.py  plot_style.py  simulation.py
src/tools/: create_vlv_slab.py  cut_region.py  defective_wall.py  symmetrize_walls.py
stash/: create_amorphous_walls.sh  create_crystalline_walls.sh  liquid_equilibrium.sh  liquid_vapor_mixture.sh  run_lj_liquid_equilibrium.sh  run_lj_liquid_production.sh  run_slit_pore_production.sh  run_slit_pore_thermalization.sh  run_slit_simulation_NVE.sh  run_slit_simulation_NVT.sh  vapor_equilibrium.sh  vle_vacuum.sh
(+12 files in other folders)
