[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amorphous_wetting"
version = "0.2.0"
description = "MD simulation framework for wetting analysis"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*"]
requires-python = ">=3.9"
authors = [
  { name = "Tolga Atalay", email = "tolga.atalay@fu-berlin.de" },
]
classifiers = [
    "Development Status :: Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "h5py",
    "matplotlib",
]

[project.optional-dependencies]
notebooks = [
    "scipy",
]

[project.scripts]
generate-slab = "tools.create_vlv_slab:main"
symmetrize-walls = "tools.symmetrize_walls:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["checks", "checks.*", "tests", "tests.*"]

[project.urls]
Repository = "https://github.com/atalaytolga/amorphous-wetting-md"
Issues = "https://github.com/atalaytolga/amorphous-wetting-md/issues"
